Add results view to current player's pod listing
